# coder-mem

./: .env.example  .gitignore  CLAUDE.md  README.md  coder-mem  current_prompt.md  expense-tracker-prompt.txt  install-coder-mem.sh  main.py  pyproject.toml
.claude/: settings.local.json
.claude/agents/: memory-recall.md  memory-store.md
coding_agent/commands/: native_commands.py
coding_agent/core/: agent.py  agent_registry.py  base_agent.py  llm_providers.py
coding_agent/utils/: banner.py
docs/memory/: agent_registry_update.md  analysis_v1.md  implementation_plan_v1.md  implementation_summary.md  phase1_analysis.md
docs/memory/essential_code/: pseudo_reviewed.txt  pseudo_to_review.txt
docs/memory/guides/: memory-recall-guide.md  memory-store-guide.md
tests/: test_enhanced_agent.py
